fix: update configuration vercel.json

--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -2,14 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "./main.js",
+      "src": "src/main.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "src/main.ts",
+      "methods": ["GET", "POST", "PATCH", "PUT", "DELETE"]
     }
   ]
 }
